# NaNoPy

./: .gitignore  LICENCE  README.md  pyproject.toml
NaNoPy/: NaNoPy.py  __init__.py  input_demo.py  squares.py  test.py  test_interactive.ipynb  test_randommove.py  test_spline.py
NaNoPy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
docs/: correctness-and-lifecycle.md
src/NaNoPy/: __init__.py  collisions.py  constants.py  decorators.py  utils.py
src/NaNoPy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/NaNoPy/classes/: __init__.py  canvas.py  collision.py  color.py  keylistener.py  listener.py  mainloop.py  moviewriter.py  spline.py  writer.py
src/NaNoPy/constants/: __init__.py  _color_data.py
src/NaNoPy/custom_types/: __init__.py  generalized_types.py  sdl2types.py
src/NaNoPy/demos/: ball_window.py  blobby.py  collision_demo.py  collision_demo_multi.py  collision_test.py  colors_palette.py  dots.py  efficiency.py  font_bug_on_graph_window.py  funky_polygons.py  input.py  input_demo.py  interactive.ipynb  mac_arm_ball.py  mac_arm_problem.py  mac_problem.py  mp4_export_examples.py  multiple_ball.py  multiple_windows.py  nerve.py  randommove.py  splines.py  squares.py  test.py  test_dots.py  test_efficiency.py  test_randommove.py  test_spline.py  test_two_screens.py  warning_deprecated.py
tests/: test_collisions.py  test_color.py  test_decorators.py  test_embedded_capture.py  test_moviewriter.py  test_sdl_lifecycle.py  test_writer_coordinates.py
