[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "NaNoPy"
version = "1.4.42"
authors = [
  { name="Johan Slotman", email="j.slotman@erasmusmc.nl" },
  { name="Bart Geverts", email="b.geverts@erasmusmc.nl"},
]
description = "A Graphical pySDL2 based engine for Nanobiology Erasmus MC/TU Delft"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "Numpy",
    "PySDL2",
    "pysdl2-dll",
]

[project.urls]
Homepage = "https://erasmusoic.nl"
