[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "NaNoPy"
version = "1.5.42"
authors = [
  { name="Johan Slotman", email="j.slotman@erasmusmc.nl" },
  { name="Bart Geverts", email="b.geverts@erasmusmc.nl"},
]
description = "A Graphical pySDL2 based engine for Nanobiology Erasmus MC/TU Delft"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "Numpy",
    "PySDL2",
    "pysdl2-dll",
    "Pillow",
]

[project.optional-dependencies]
interactive = [
    "ipython"
]
video = [
    "ffmpeg"
]

[project.urls]
Homepage = "https://erasmusoic.nl"

[tool.ruff]
# Ruff is code formater and linter by UV.
# Allow lines to be as long as 100. Default is 88 max 320.
line-length = 150
